# reindeer_v2

./: .gitignore  README.md
C++/: -O3  files.cpp  files.hpp  main  main.cpp  makefile  strings.cpp  strings.hpp
C++ prototype 1/: files.hpp  makefile  results.cpu
C++_prototype_1/: files.cpp  main.cpp  strings.hpp
Prototype 1/: README.md
Prototype 1/C++/: makefile  utils.hpp
Prototype 2/: CMakeLists.txt  README.md
Prototype 2/app/: CMakeLists.txt  main.cpp
Prototype 2/doc/Doxygen/: Doxyfile.in  DoxygenLayout.xml
Prototype 2/lib/: CMakeLists.txt
Prototype 2/lib/include/reindeer2/: utils.hpp
Prototype 2/lib/src/: dummy.cpp
Prototype_1/C++/: strings.cpp
Prototype_1/Python/: files_handling.py  main.py  strings_handling.py  trie.py
Prototype_2/: CMakeLists.txt
Prototype_2/app/: main.cpp
Prototype_2/doc/: CMakeLists.txt
Prototype_2/doc/Doxygen/: Doxyfile.in  header.html
Prototype_2/lib/include/reindeer2/: process_input.hpp  strings.hpp  utils.hpp
Prototype_2/lib/src/: process_input.cpp  strings.cpp  utils.cpp
Python prototype 1/: utils.py
